tornado静态文件处理

--- a/template/index.html
+++ b/template/index.html
@@ -3,6 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>python web</title>
+    <script type="text/javascript" src="/static/js/jsencrpt.js"></script>
 </head>
 <body>
 Hello Python~~
