天天基金网-模拟登录演练

--- a/template/index.html
+++ b/template/index.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <title>python web</title>
     <script type="text/javascript" src="/static/js/jsencrpt.js"></script>
+    <script type="text/javascript">
+        window.onload = function () {
+            var text = JsEncrpt.decode("MCUyQzAlMkMxMzgxODczMjU5NCUyQzEyMzQ1NiUyQzAlMkMlMkM=");
+            var text2 = decodeURIComponent(text);
+            alert(text2);
+        }
+    </script>
 </head>
 <body>
 Hello Python~~
